[gd_scene load_steps=11 format=3 uid="uid://h5eqx7ddwwd4"]

[ext_resource type="Texture2D" uid="uid://b20xdely2q863" path="res://assets/tileset/card.png" id="1_csbrr"]
[ext_resource type="FontFile" uid="uid://dvp34o3ac2qp" path="res://assets/font/PixelOperator8-Bold.ttf" id="2_ijplc"]
[ext_resource type="Texture2D" uid="uid://db3qe8th6fovb" path="res://assets/icon/close.png" id="3_pqvsv"]
[ext_resource type="Script" path="res://script/x_credits.gd" id="4_pm6rf"]
[ext_resource type="AudioStream" uid="uid://cmb6ra5ap4suy" path="res://assets/sound/button-202966.mp3" id="5_vwmrd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3uj23"]
content_margin_left = 6.0

[sub_resource type="Animation" id="Animation_x4ahw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(380, 178)]
}

[sub_resource type="Animation" id="Animation_v1q4j"]
resource_name = "zoom_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.0980731, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(1.5, 1.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.0980731, 1),
"update": 0,
"values": [Vector2(380, 178), Vector2(-193, -107)]
}

[sub_resource type="Animation" id="Animation_33snf"]
resource_name = "zoom_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.0980731, 1),
"update": 0,
"values": [Vector2(1.5, 1.5), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.0980731, 1),
"update": 0,
"values": [Vector2(-193, -107), Vector2(650, 400)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p2ffv"]
_data = {
"RESET": SubResource("Animation_x4ahw"),
"zoom_in": SubResource("Animation_v1q4j"),
"zoom_out": SubResource("Animation_33snf")
}

[node name="credits_card" type="Node2D"]
position = Vector2(380, 178)
scale = Vector2(0.5, 0.5)

[node name="Card" type="Sprite2D" parent="."]
position = Vector2(571, 341)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_csbrr")

[node name="Label" type="Node2D" parent="."]

[node name="Label" type="Label" parent="Label"]
offset_left = 499.0
offset_top = 148.0
offset_right = 632.0
offset_bottom = 171.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ijplc")
theme_override_font_sizes/font_size = 20
text = "Credits"

[node name="Label2" type="Label" parent="Label"]
offset_left = 345.0
offset_top = 225.0
offset_right = 822.0
offset_bottom = 288.0
theme_override_fonts/font = ExtResource("2_ijplc")
theme_override_font_sizes/font_size = 15
text = "Sprites       ---->    DeaAfrizal / 
                                Brackeys"

[node name="Label3" type="Label" parent="Label"]
offset_left = 340.0
offset_top = 291.0
offset_right = 862.0
offset_bottom = 354.0
theme_override_fonts/font = ExtResource("2_ijplc")
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxEmpty_3uj23")
text = "Music/SFX   ---->    Brackeys / 
                                Myinstans.com"

[node name="Label4" type="Label" parent="Label"]
offset_left = 345.0
offset_top = 350.0
offset_right = 822.0
offset_bottom = 413.0
theme_override_fonts/font = ExtResource("2_ijplc")
theme_override_font_sizes/font_size = 15
text = "Coding         ---->    Brackeys / 
                                Ghazz17"

[node name="Label5" type="Label" parent="Label"]
offset_left = 345.0
offset_top = 414.0
offset_right = 822.0
offset_bottom = 477.0
theme_override_fonts/font = ExtResource("2_ijplc")
theme_override_font_sizes/font_size = 15
text = "Assistant    ---->    GPT-4o"

[node name="x_credits" type="Button" parent="."]
texture_filter = 1
offset_left = 801.0
offset_top = 190.0
offset_right = 833.0
offset_bottom = 222.0
scale = Vector2(1.3, 1.3)
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_colors/icon_pressed_color = Color(0.502719, 0.502719, 0.502719, 1)
theme_override_colors/icon_hover_color = Color(0.501961, 0.501961, 0.501961, 1)
icon = ExtResource("3_pqvsv")
flat = true
script = ExtResource("4_pm6rf")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_p2ffv")
}

[node name="Button_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_vwmrd")
bus = &"SFX"

[connection signal="pressed" from="x_credits" to="x_credits" method="_on_pressed"]
